[project]
name = "chatbot-langgraph"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=0.3.74",
    "langchain>=0.3.27",
    "langgraph>=0.6.6",
    "langchain-community>=0.3.27",
    "python-dotenv>=1.1.1",
    "langchain-groq>=0.3.7",
]
